[Optic-Disc-Segmentation] Add the tex file for the report

--- a/report/IDRiD/Monoclonal.tex
+++ b/report/IDRiD/Monoclonal.tex
@@ -15,14 +15,14 @@
 \hyphenation{op-tical net-works semi-conduc-tor}
 
 \author{
-    \IEEEauthorblockN{Shashank Reddy B\IEEEauthorrefmark{1}, Sreedhar Reddy V\IEEEauthorrefmark{1}, Dr. Santhi B\IEEEauthorrefmark{1}}
-    \IEEEauthorblockA{\IEEEauthorrefmark{1} School of Computing\\   { { SASTRA Deemed University}}
-    \\\{shashank1872, reddyvsree\}@gmail.com, shanthi@cse.sastra.edu}
+    \IEEEauthorblockN{Shashank Reddy B\IEEEauthorrefmark{1}}
+    \IEEEauthorblockA{\IEEEauthorrefmark{1} School of Computing\\   { { University of New South Wales}}
+    \\\{z5222766\}@student.unsw.edu.au}
 }
 
 \begin{document}
 
-\title{A Machine Learning Approach to Prediction of \\deaths due to Monoclonal Gammopathy}
+\title{Computer Vision Individual Assignment}
 
 
 % make the title area
@@ -35,7 +35,7 @@
  The results we achieved, proved to be better when certain preprocessing techniques were used for the specific application of an algorithm. The results varied when missing values are replaced with mode, mean, mean with class label etc. We considered removing the tuples where the missing values are found, with consequence of losing valuable data. The accuracy of 82.6\% is achieved by 	Support Vector Machines, followed by the K-Nearest Neighbor, Logistic Regression  .
 
 \paragraph*{Keywords}
-Monoclonal Gammopathy, Cancer, Machine Learning, Disease progression to death, MGUS.
+Optic Disc, Segmentation, Gaussian Blur, Canny, Hough Transform.
 
 \end{abstract}
 
