[Optic-Disc-Segmentation] Finish the code for a single image

--- a/report/IDRiD/references.bib
+++ b/report/IDRiD/references.bib
@@ -60,5 +60,29 @@ doi="10.1007/s10916-009-9426-y",
 url="https://doi.org/10.1007/s10916-009-9426-y"
 }
 
+@article{idrid,
+  title={IDRiD: Diabetic Retinopathy--Segmentation and Grading Challenge},
+  author={Porwal, Prasanna and Pachade, Samiksha and Kokare, Manesh and Deshmukh, Girish and Son, Jaemin and Bae, Woong and Liu, Lihong and Wang, Jianzong and Liu, Xinhui and Gao, Liangxin and others},
+  journal={Medical image analysis},
+  volume={59},
+  pages={101561},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{canny,
+  title={A computational approach to edge detection},
+  author={Canny, John},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  number={6},
+  pages={679--698},
+  year={1986},
+  publisher={Ieee}
+}
+
+
+
+
+
 
 
