[Optic-Disc-Segmentation] Final report modifications

--- a/report/IDRiD/references.bib
+++ b/report/IDRiD/references.bib
@@ -80,6 +80,30 @@ url="https://doi.org/10.1007/s10916-009-9426-y"
   publisher={Ieee}
 }
 
+@misc{drive,
+  title = {Drive Dataset},
+  howpublished = {\url{http://www.isi.uu.nl/Research/Databases/DRIVE/}},
+  note = {Accessed: 2019-11-23}
+}
+
+
+
+@InProceedings{p5,
+author="Usman Akram, M.
+and Khan, Aftab
+and Iqbal, Khalid
+and Butt, Wasi Haider",
+editor="Campilho, Aur{\'e}lio
+and Kamel, Mohamed",
+title="Retinal Images: Optic Disk Localization and Detection",
+booktitle="Image Analysis and Recognition",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="40--49",
+abstract="Automated localization and detection of the optic disc (OD) is an essential step in the analysis of digital diabetic retinopathy systems. Accurate localization and detection of optic disc boundary is very useful in proliferative diabetic retinopathy where fragile vessels develop in the retina. In this paper, we propose an automated system for optic disk localization and detection. Our method localizes optic disk using average filter and thresholding, extracts the region of interest (ROI) containing optic disk to save time and detects the optic disk boundary using Hough transform. This method can be used in computerized analysis of retinal images, e.g., in automated screening for diabetic retinopathy. The technique is tested on publicly available DRIVE, STARE, diaretdb0 and diaretdb1 databases of manually labeled images which have been established to facilitate comparative studies on localization and detection of optic disk in retinal images. The proposed method achieves an average accuracy of 96.7{\%} for localization and an average area under the receiver operating characteristic curve of 0.958 for optic detection.",
+isbn="978-3-642-13775-4"
+}
 
 
 
